# thpronun

./: AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac
data/: Makefile.am  ex-elong.tsv  ex-karan.tsv  ex-misc.tsv  ex-montho-d.tsv  ex-multi-end.tsv  ex-short.tsv  ex-tone.tsv  ex-tr-so.tsv
dict/: Makefile.am  dict.cxx  dict.h  dict.inl  gen-lookup-dict.c
dict/tests/: Makefile.am  test-dict.cxx  test-dict.sh  test.lst
lattice/: Makefile.am  dag.h  dag.inl  lattice.cxx  lattice.h  lattice.inl  pron-dag.cxx  pron-dag.h
lattice/tests/: Makefile.am  test-dag.cxx  test-prondag.cxx
output/: Makefile.am  ioutput.cxx  ioutput.h  isyl-output.cxx  isyl-output.h  output-delim.cxx  output-delim.h  output-delim.inl  output-gjson.cxx  output-gjson.h  output-gjson.inl  output-json.cxx  output-json.h  output-json.inl  output-roman.cxx  output-roman.h  output-roman.inl  sylout-phonetic.cxx  sylout-phonetic.h  sylout-raw.cxx  sylout-raw.h  sylout-roman.cxx  sylout-roman.h  sylout-soundex.cxx  sylout-soundex.h  sylout-thai.cxx  sylout-thai.h
output/tests/: Makefile.am  test-lattice.cxx  test-list.cxx  test-sylstring.cxx
parser/: Makefile.am  parser.cxx  parser.h
parser/tests/: Makefile.am  except.lst  test-parser.cxx
sylstring/: Makefile.am  syl.cxx  syl.h  syl.inl  sylcomp.cxx  sylcomp.h  sylcomp.inl  sylout-phonetic.cxx  sylout-phonetic.h  sylout-roman.cxx  sylout-roman.h  sylout-thai.cxx  sylout-thai.h  sylstring.cxx  sylstring.h  sylstring.inl  sylstrout-delim.cxx  sylstrout-delim.h  sylstrout-delim.inl  sylstrout-json.cxx  sylstrout-json.h  sylstrout-json.inl  sylstrout-roman.cxx  sylstrout-roman.h  sylstrout-roman.inl
sylstring/tests/: Makefile.am  test-syl.cxx  test-sylcomp.cxx  test-sylstring.cxx
thortho/: Makefile.am  thcons.cxx  thcons.h  thcons.inl  thuni.h
thortho/tests/: Makefile.am  test-thcons.cxx
thpronun/: Makefile.am  thpronun.cxx
thpronun/tests/: Makefile.am  test-bhumi.sh  test-chaowana.sh  test-kaset.sh  test-petch.sh  test-rajgruh.sh  test-thyroid.sh
