#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([thpronun],
        [0.0.0],
        [theppitak@gmail.com])
AC_CONFIG_SRCDIR([sylstring/sylcomp.h])
AC_CONFIG_MACRO_DIRS([m4])

AM_INIT_AUTOMAKE(dist-xz no-dist-gzip)

# Checks for programs.
AC_PROG_CXX
AM_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 sylstring/Makefile
                 sylstring/tests/Makefile])
AC_OUTPUT
