TESTS = \
	test-kaset.sh	\
	test-thyroid.sh	\
	test-rajgruh.sh	\
	test-bhumi.sh	\
	test-petch.sh	\
	test-chaowana.sh	\
	$(NULL)

check_SCRIPTS = \
	test-kaset.sh	\
	test-thyroid.sh	\
	test-rajgruh.sh	\
	test-bhumi.sh	\
	test-petch.sh	\
	test-chaowana.sh	\
	$(NULL)

EXTRA_DIST = \
	$(check_SCRIPTS)	\
	$(NULL)

CLEANFILES = \
	test-kaset.lst	\
	test-kaset.dic	\
	$(NULL)

